--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "ipykernel>=6.29.5",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.3",
+    "pytest>=8.4.0",
     "scipy>=1.15.3",
     "seaborn>=0.13.2",
 ]
